--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
     "lint": "eslint"
   },
   "dependencies": {
-    "mongoose": "^8.18.1",
+    "bcryptjs": "^3.0.2",
+    "lucide-react": "^0.544.0",
+    "mongoose": "^8.18.2",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hot-toast": "^2.6.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
